--- a/Style1.css
+++ b/Style1.css
@@ -28,19 +28,21 @@
 	width: 270px;
 	vertical-align: top;
 }
-.footer{
-	background-color: grey;
-}
+
 .fb{
 	height: 30px;
+	
 }
 .divider{
 	background-color: #3d58a6;
 	height: 30px;
 	width: 1px; 
+	margin-right: 33px;
+	margin-left: 33px; 
 }
 .yt{
 	height: 30px;
+
 }
 .tarigi{
 	color: white;
@@ -61,7 +63,7 @@
 
 .wrapper{
 	margin-bottom: 60px;
-	
+
 }
 .toptext{
 	margin-bottom: 23px;
