--- a/css/Style1.css
+++ b/css/Style1.css
@@ -33,6 +33,12 @@
 .satauri{
 	font-family: 'BPG Nino Mtavruli', sans-serif;
 }
+.text{
+	font-family: 'BPG Ingiri Arial';
+}
+.image{
+	margin-right: 39px;
+}
 .fb{
 	height: 30px;
 	
