--- a/css/Style2.css
+++ b/css/Style2.css
@@ -79,6 +79,7 @@
 	margin-left: 67px;
 	background-color: #eff0f4;
 	padding: 5px;
+	vertical-align: middle;
 }
 
     /*leftbannerend*/
@@ -91,7 +92,7 @@
 	margin-bottom: 20px;
 }
 .mob{
-	width: 100px;
+	width: 85px;
 	margin-left: 20px;
 	margin-right: 60px;
 }
@@ -104,6 +105,8 @@
 	margin-left: 67px;
 	background-color: #eff0f4;
 	padding: 5px;
+	border: solid 1px;
+	vertical-align: middle;
 }
     /*rightbannerend*/
 
