--- a/css/Style3.css
+++ b/css/Style3.css
@@ -33,17 +33,26 @@
 
 /*main*/
 
-.mapbg{
+.bg{
 	background-color: #e6e6e6;
+	margin-top: 30px;
+	margin-bottom: 30px;
 }
 .map{
-	width: 875px;
+	width: 485px;
 	margin-left: 400px;
 	margin-top: 50px;
-	margin-right: 90px;
 	margin-bottom: 55px;
+	vertical-align: middle;
 }
+.text{
+	/*vertical-align: middle;*/
+	margin-top: 50px;
+	margin-left: 95px;
+	font-size: 16px;
+	font-family: 'BPG Ingiri Arial', sans-serif;
 
+}
 
 /*main end*/
 
